<resources>
    <string name="app_name">課題７ クイズアプリ</string>
    <string name="app_icon_desc">クイズアプリのアイコン</string>
    <string name="quiz_btn_text">クイズをはじめいよう！</string>
    <string name="answer_button">回答</string>
    <string name="reset_button">リセット</string>
    <string name="correct_rate">正解率：</string>
    <string name="perform_well">よくできました！</string>
    <string name="perform_unwell">もうひと踏ん張り！</string>
    <string name="blank_answer_warn">選択肢をどれか選んでください</string>
    <string name="continue_quiz">クイズを続きます</string>
    <string name="farewell_description">遊んで呉でありがとう</string>
    <string name="farewell_text">まだ遊んでね</string>
    <string name="farewell_result_format">%1$d問中%2$d問正解 正解率%3$d%%</string>
</resources>